--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-          <img  className='descarga-app' src='https://i.pinimg.com/736x/ed/70/51/ed70515b5aca17fbd9352242aec6c291.jpg'>
-          <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="icon" type="image/svg+xml" href="https://i.pinimg.com/736x/ed/70/51/ed70515b5aca17fbd9352242aec6c291.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio || Santiago Rivera Prada</title>
   </head>
